Fix emoji panel full width on mobile being overridden by local styles

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -136,7 +136,7 @@ body {
 		padding: 0;
 
 		mat-tab-group {
-			width: 100%;
+			width: 100% !important;
 		}
 	}
 }
